2024-01-25T16:21:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7657411122 # 56
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
* notice: last 14d: unq all: 3 21
* notice: prev accum: outdated-unq outdated-all / unq all: 847 1548 / 859 1568
* notice: next accum: outdated-unq outdated-all / unq all: 847 1548 / 859 1569
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-25]

2024-01-25T08:20:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7651705013 # 55
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 847 1548 / 858 1567
* notice: next accum: outdated-unq outdated-all / unq all: 847 1548 / 859 1568
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-25]

2024-01-25T01:11:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7648440579 # 54
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
* notice: last 14d: unq all: 3 19
* notice: prev accum: outdated-unq outdated-all / unq all: 846 1547 / 858 1567
* notice: next accum: outdated-unq outdated-all / unq all: 847 1548 / 858 1567
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-11] / []

2024-01-24T16:20:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7643116730 # 53