@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-25T16:21:04Z",
-  "count_outdated" : 1548,
-  "uniques_outdated" : 847,
-  "count" : 1569,
-  "uniques" : 859,
+  "timestamp" : "2024-01-26T08:18:03Z",
+  "count_outdated" : 1550,
+  "uniques_outdated" : 849,
+  "count" : 1570,
+  "uniques" : 860,
   "clones" : [
-    {
-      "timestamp": "2024-01-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-01-17T00:00:00Z",
       "count": 1,
@@ -91,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
