@@ -1,12 +1,7 @@
 {
-  "count": 21,
-  "uniques": 3,
+  "count": 20,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2024-01-12T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-01-17T00:00:00Z",
       "count": 1,
@@ -50,6 +45,11 @@
     {
       "timestamp": "2024-01-25T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-26T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
