@@ -1,3 +1,12 @@
+2024-01-26T08:18:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7665579850 # 58
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
+* notice: last 14d: unq all: 2 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 847 1548 / 859 1569
+* notice: next accum: outdated-unq outdated-all / unq all: 849 1550 / 860 1570
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-01-12] / [2024-01-26]
+
 2024-01-25T16:21:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7657411122 # 56
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
